--- a/.github/workflows/tests_CiCD.yaml
+++ b/.github/workflows/tests_CiCD.yaml
@@ -1,6 +1,6 @@
 name: CI/CD demo
 
-on: 
+on:
   push:
     branches:
       - main
@@ -16,7 +16,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Set APP_VERSION environment variable
-        id: vars
+        id: set_version
         run: echo "APP_VERSION=$(date +%Y-%m-%d-%H-%M-%S)" >> $GITHUB_ENV
 
       - name: Log in to DockerHub
@@ -27,8 +27,8 @@ jobs:
 
       - name: Build and push Docker image
         run: |
-          docker build -t ${{ secrets.DOCKER_USERNAME }}/formation-devops-training:$APP_VERSION .
-          docker push ${{ secrets.DOCKER_USERNAME }}/formation-devops-training:$APP_VERSION
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/formation-devops-training:${{ env.APP_VERSION }} .
+          docker push ${{ secrets.DOCKER_USERNAME }}/formation-devops-training:${{ env.APP_VERSION }}
 
   tests_unitaires:
     name: Run Unit Tests
@@ -49,11 +49,14 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y docker-compose
 
+      - name: Set APP_VERSION environment variable
+        run: echo "APP_VERSION=${{ needs.build_and_push.outputs.set_version.outputs.APP_VERSION }}" >> $GITHUB_ENV
+
       - name: Build and run Docker containers
         run: |
           mkdir -p postgresql_data
           docker-compose -f docker-compose-dev.yml up -d
-          sleep 10  # Augmenter le temps de sommeil pour permettre aux services de démarrer
+          sleep 10  # Increase sleep time to allow services to start
 
       - name: Show containers
         run: |
@@ -94,13 +97,13 @@ jobs:
           password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Set APP_VERSION environment variable
-        run: echo "APP_VERSION=${{ steps.vars.outputs.APP_VERSION }}" >> $GITHUB_ENV
+        run: echo "APP_VERSION=${{ needs.build_and_push.outputs.set_version.outputs.APP_VERSION }}" >> $GITHUB_ENV
 
       - name: Build and run Docker container
         run: |
           mkdir -p postgresql_data
           docker-compose -f docker-compose-dev.yml up -d
-          sleep 10  # Augmenter le temps de sommeil pour permettre aux services de démarrer
+          sleep 10  # Increase sleep time to allow services to start
 
       - name: Show containers
         run: |
