--- a/.github/workflows/tests_CiCD.yaml
+++ b/.github/workflows/tests_CiCD.yaml
@@ -49,9 +49,6 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y docker-compose
 
-      - name: Set APP_VERSION environment variable
-        run: echo "APP_VERSION=${{ needs.build_and_push.outputs.set_version.outputs.APP_VERSION }}" >> $GITHUB_ENV
-
       - name: Build and run Docker containers
         run: |
           mkdir -p postgresql_data
@@ -66,7 +63,6 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install -r requirements.txt
-          ls -l
           docker exec -i formation-devops-training_web_1 python -m pip install -r /app/requirements.txt
 
       - name: Run unit tests
@@ -97,7 +93,7 @@ jobs:
           password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Set APP_VERSION environment variable
-        run: echo "APP_VERSION=${{ needs.build_and_push.outputs.set_version.outputs.APP_VERSION }}" >> $GITHUB_ENV
+        run: echo "APP_VERSION=${{ env.APP_VERSION }}" >> $GITHUB_ENV
 
       - name: Build and run Docker container
         run: |
