--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -2,8 +2,7 @@ version: '3.8'
 
 services:
   web:
-    # build: .
-    image: leroy971/demo:${APP_VERSION}
+    image: leroy971/demo:latest
     environment:
       - DB_HOST=db
     ports:
