--- a/.github/workflows/tests_CiCD.yaml
+++ b/.github/workflows/tests_CiCD.yaml
@@ -17,7 +17,8 @@ jobs:
 
       - name: Set APP_VERSION environment variable
         id: set_version
-        run: echo "APP_VERSION=$(date +%Y-%m-%d-%H-%M-%S)" >> $GITHUB_ENV
+        run: export APP_VERSION=$(date +%Y-%m-%d-%H-%M-%S)
+
 
       - name: Log in to DockerHub
         uses: docker/login-action@v2
@@ -27,8 +28,8 @@ jobs:
 
       - name: Build and push Docker image
         run: |
-          docker build -t ${{ secrets.DOCKER_USERNAME }}/formation-devops-training:${{ env.APP_VERSION }} .
-          docker push ${{ secrets.DOCKER_USERNAME }}/formation-devops-training:${{ env.APP_VERSION }}
+          docker build -t leroy971/demo:latest .
+          docker push leroy971/demo:latest
 
   tests_unitaires:
     name: Run Unit Tests
@@ -52,8 +53,6 @@ jobs:
       - name: Build and run Docker containers
         run: |
           mkdir -p postgresql_data
-          export APP_VERSION=$(date +%Y-%m-%d-%H-%M-%S)
-
           docker-compose -f docker-compose-dev.yml up -d
           docker-compose -f docker-compose-dev.yml logs web
           sleep 10  # Increase sleep time to allow services to start
