--- a/.github/workflows/tests_CiCD.yaml
+++ b/.github/workflows/tests_CiCD.yaml
@@ -17,8 +17,7 @@ jobs:
 
       - name: Set APP_VERSION environment variable
         id: set_version
-        run: export APP_VERSION=$(date +%Y-%m-%d-%H-%M-%S)
-
+        run: echo "APP_VERSION=$(date +%Y-%m-%d-%H-%M-%S)" >> $GITHUB_ENV
 
       - name: Log in to DockerHub
         uses: docker/login-action@v2
@@ -28,8 +27,8 @@ jobs:
 
       - name: Build and push Docker image
         run: |
-          docker build -t leroy971/demo:latest .
-          docker push leroy971/demo:latest
+          docker build -t leroy971/demo:${{ env.APP_VERSION }} .
+          docker push leroy971/demo:${{ env.APP_VERSION }}
 
   tests_unitaires:
     name: Run Unit Tests
@@ -72,9 +71,7 @@ jobs:
           docker run -d -i --name unit_tests --network formation-devops-training_default \
             -v $PWD:/opt/formation-devops-training \
             -w /opt/formation-devops-training \
-            python:3.10-slim bash
-          docker exec -i unit_tests python3 -m pip install -r requirements.txt
-          docker exec -i unit_tests python3 /opt/formation-devops-training/test_main.py
+            python:3.10-slim bash -c "pip install -r requirements.txt && python /opt/formation-devops-training/test_main.py"
 
       - name: Run integration test
         run: |
