--- a/.github/workflows/tests_CiCD.yaml
+++ b/.github/workflows/tests_CiCD.yaml
@@ -17,7 +17,7 @@ jobs:
 
       - name: Set APP_VERSION environment variable
         id: set_version
-        run: echo "APP_VERSION=$(date +%Y-%m-%d-%H-%M-%S)" >> $GITHUB_ENV
+        run: echo "APP_VERSION=$(date +%Y %m %d %H %M %S)" >> $GITHUB_ENV
 
       - name: Log in to DockerHub
         uses: docker/login-action@v2
