--- a/.github/workflows/tests_CiCD.yaml
+++ b/.github/workflows/tests_CiCD.yaml
@@ -15,9 +15,27 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
 
-      - name: Set APP_VERSION environment variable
-        id: set_version
-        run: echo "APP_VERSION=$(date +%Y %m %d %H %M %S)" >> $GITHUB_ENV
+      - name: Get current version
+        id: get_version
+        run: |
+          if [ -f version.txt ]; then
+            VERSION=$(cat version.txt)
+          else
+            VERSION="v0"
+          fi
+          echo "Current version: $VERSION"
+          echo "VERSION=$VERSION" >> $GITHUB_ENV
+
+      - name: Increment version
+        id: increment_version
+        run: |
+          VERSION=${{ env.VERSION }}
+          VERSION_NUMBER=$(echo $VERSION | sed 's/v//')
+          NEXT_VERSION_NUMBER=$((VERSION_NUMBER + 1))
+          NEXT_VERSION="v$NEXT_VERSION_NUMBER"
+          echo "Next version: $NEXT_VERSION"
+          echo "APP_VERSION=$NEXT_VERSION" >> $GITHUB_ENV
+          echo $NEXT_VERSION > version.txt
 
       - name: Log in to DockerHub
         uses: docker/login-action@v2
@@ -85,21 +103,4 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
 
-      - name: Log in to DockerHub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-
-      - name: Set APP_VERSION environment variable
-        run: echo "APP_VERSION=${{ env.APP_VERSION }}" >> $GITHUB_ENV
-
-      - name: Build and run Docker container
-        run: |
-          mkdir -p postgresql_data
-          docker-compose -f docker-compose-dev.yml up -d
-          sleep 10  # Increase sleep time to allow services to start
-
-      - name: Show containers
-        run: |
-          docker-compose -f docker-compose-dev.yml ps
+      - name: Log in to Dock
