--- a/.github/workflows/tests_CiCD.yaml
+++ b/.github/workflows/tests_CiCD.yaml
@@ -23,8 +23,7 @@ jobs:
           else
             VERSION="v0"
           fi
-          echo "Current version: $VERSION"
-          echo "VERSION=$VERSION" >> $GITHUB_ENV
+          echo "VERSION=${VERSION}" >> $GITHUB_ENV
 
       - name: Increment version
         id: increment_version
@@ -33,9 +32,8 @@ jobs:
           VERSION_NUMBER=$(echo $VERSION | sed 's/v//')
           NEXT_VERSION_NUMBER=$((VERSION_NUMBER + 1))
           NEXT_VERSION="v$NEXT_VERSION_NUMBER"
-          echo "Next version: $NEXT_VERSION"
-          echo "APP_VERSION=$NEXT_VERSION" >> $GITHUB_ENV
-          echo $NEXT_VERSION > version.txt
+          echo "APP_VERSION=${NEXT_VERSION}" >> $GITHUB_ENV
+          echo ${NEXT_VERSION} > version.txt
 
       - name: Log in to DockerHub
         uses: docker/login-action@v2
@@ -103,4 +101,18 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
 
-      - name: Log in to Dock
+      - name: Log in to DockerHub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Build and run Docker container
+        run: |
+          mkdir -p postgresql_data
+          docker-compose -f docker-compose-dev.yml up -d
+          sleep 10  # Increase sleep time to allow services to start
+
+      - name: Show containers
+        run: |
+          docker-compose -f docker-compose-dev.yml ps
