--- a/.github/workflows/tests_CiCD.yaml
+++ b/.github/workflows/tests_CiCD.yaml
@@ -15,6 +15,10 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
 
+      - name: Set APP_VERSION environment variable
+        id: set_version
+        run: echo "APP_VERSION=$(date +%Y-%m-%d-%H-%M-%S)" >> $GITHUB_ENV
+
       - name: Log in to DockerHub
         uses: docker/login-action@v2
         with:
@@ -23,8 +27,8 @@ jobs:
 
       - name: Build and push Docker image
         run: |
-          docker build -t leroy971/demo:${{ env.APP_VERSION }} .
-          docker push leroy971/demo:${{ env.APP_VERSION }}
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/formation-devops-training:${{ env.APP_VERSION }} .
+          docker push ${{ secrets.DOCKER_USERNAME }}/formation-devops-training:${{ env.APP_VERSION }}
 
   tests_unitaires:
     name: Run Unit Tests
@@ -45,11 +49,15 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y docker-compose
 
+      - name: Set APP_VERSION environment variable
+        run: echo "APP_VERSION=${{ needs.build_and_push.outputs.set_version.outputs.APP_VERSION }}" >> $GITHUB_ENV
+
       - name: Build and run Docker containers
         run: |
+          export APP_VERSION
           mkdir -p postgresql_data
+          docker pull leroy971/demo:lastest
           docker-compose -f docker-compose-dev.yml up -d
-          docker-compose -f docker-compose-dev.yml logs web
           sleep 10  # Increase sleep time to allow services to start
 
       - name: Show containers
@@ -60,6 +68,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install -r requirements.txt
+          ls -l
           docker exec -i formation-devops-training_web_1 python -m pip install -r /app/requirements.txt
 
       - name: Run unit tests
@@ -67,7 +76,9 @@ jobs:
           docker run -d -i --name unit_tests --network formation-devops-training_default \
             -v $PWD:/opt/formation-devops-training \
             -w /opt/formation-devops-training \
-            python:3.10-slim bash -c "pip install -r requirements.txt && python /opt/formation-devops-training/test_main.py"
+            python:3.10-slim bash
+          docker exec -i unit_tests python3 -m pip install -r requirements.txt
+          docker exec -i unit_tests python3 /opt/formation-devops-training/test_main.py
 
       - name: Run integration test
         run: |
@@ -86,6 +97,9 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Set APP_VERSION environment variable
+        run: echo "APP_VERSION=${{ needs.build_and_push.outputs.set_version.outputs.APP_VERSION }}" >> $GITHUB_ENV
 
       - name: Build and run Docker container
         run: |
