--- a/.github/workflows/tests_CiCD.yaml
+++ b/.github/workflows/tests_CiCD.yaml
@@ -10,14 +10,16 @@ jobs:
   build_and_push:
     name: Build and Push Docker Image
     runs-on: ubuntu-latest
-
+    outputs:
+      app_version: ${{ steps.set_version.outputs.app_version }}
+      
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
 
       - name: Set APP_VERSION environment variable
         id: set_version
-        run: echo "APP_VERSION=$(date +%Y-%m-%d-%H-%M-%S)" >> $GITHUB_ENV
+        run: echo "::set-output name=app_version::v$(date +%Y%m%d%H%M%S)"
 
       - name: Log in to DockerHub
         uses: docker/login-action@v2
@@ -27,13 +29,15 @@ jobs:
 
       - name: Build and push Docker image
         run: |
-          docker build -t ${{ secrets.DOCKER_USERNAME }}/formation-devops-training:${{ env.APP_VERSION }} .
-          docker push ${{ secrets.DOCKER_USERNAME }}/formation-devops-training:${{ env.APP_VERSION }}
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/formation-devops-training:${{ steps.set_version.outputs.app_version }} .
+          docker push ${{ secrets.DOCKER_USERNAME }}/formation-devops-training:${{ steps.set_version.outputs.app_version }}
 
   tests_unitaires:
     name: Run Unit Tests
     runs-on: ubuntu-latest
     needs: build_and_push
+    env:
+      APP_VERSION: ${{ needs.build_and_push.outputs.app_version }}
 
     steps:
       - name: Checkout repository
@@ -49,14 +53,9 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y docker-compose
 
-      - name: Set APP_VERSION environment variable
-        run: echo "APP_VERSION=${{ needs.build_and_push.outputs.set_version.outputs.APP_VERSION }}" >> $GITHUB_ENV
-
       - name: Build and run Docker containers
         run: |
-          export APP_VERSION
           mkdir -p postgresql_data
-          docker pull leroy971/demo:lastest
           docker-compose -f docker-compose-dev.yml up -d
           sleep 10  # Increase sleep time to allow services to start
 
@@ -68,7 +67,6 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install -r requirements.txt
-          ls -l
           docker exec -i formation-devops-training_web_1 python -m pip install -r /app/requirements.txt
 
       - name: Run unit tests
@@ -87,6 +85,8 @@ jobs:
   deploy:
     runs-on: self-hosted
     needs: tests_unitaires
+    env:
+      APP_VERSION: ${{ needs.build_and_push.outputs.app_version }}
 
     steps:
       - name: Checkout repository
@@ -97,9 +97,6 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-
-      - name: Set APP_VERSION environment variable
-        run: echo "APP_VERSION=${{ needs.build_and_push.outputs.set_version.outputs.APP_VERSION }}" >> $GITHUB_ENV
 
       - name: Build and run Docker container
         run: |
