--- a/.github/workflows/tests_CiCD.yaml
+++ b/.github/workflows/tests_CiCD.yaml
@@ -9,7 +9,7 @@ on:
 jobs:
   build_and_push:
     name: Build and Push Docker Image
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     outputs:
       app_version: ${{ steps.set_version.outputs.app_version }}
 
@@ -33,7 +33,7 @@ jobs:
           docker push ${{ secrets.DOCKER_USERNAME }}/demo:${{ steps.set_version.outputs.app_version }}
   tests_unitaires:
     name: Run Unit Tests
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     needs: build_and_push
     env:
       APP_VERSION: ${{ needs.build_and_push.outputs.app_version }}
@@ -53,6 +53,7 @@ jobs:
           sudo curl -L "https://github.com/docker/compose/releases/latest/download/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
           sudo chmod +x /usr/local/bin/docker-compose
           docker-compose --version
+          docker --version
       - name: Build and run Docker containers
         run: |
           mkdir -p postgresql_data
