--- a/.github/workflows/tests_CiCD.yaml
+++ b/.github/workflows/tests_CiCD.yaml
@@ -69,6 +69,8 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install -r requirements.txt
+
+          docker-compose -f docker-compose-dev.yml ps
           docker exec -i formation-devops-training_web_1 python -m pip install -r /app/requirements.txt
       - name: Run unit tests
         run: |
