--- a/.github/workflows/tests_CiCD.yaml
+++ b/.github/workflows/tests_CiCD.yaml
@@ -82,6 +82,11 @@ jobs:
           docker exec -i unit_tests python3 /opt/formation-devops-training/test_main.py
       - name: Run integration test
         run: |
+          sudo chown -R $USER:$USER /home/outscale/actions-runner/_work/formation-devops-training/formation-devops-training/postgresql_data/__init__.py
+          sudo chown -R $USER:$USER /home/outscale/actions-runner/_work/formation-devops-training/formation-devops-training/postgresql_data/__init__.py
+
+          
+
           pytest test_e2e.py
   deploy:
     runs-on: self-hosted
