--- a/.github/workflows/tests_CiCD.yaml
+++ b/.github/workflows/tests_CiCD.yaml
@@ -19,7 +19,7 @@ jobs:
 
       - name: Set APP_VERSION environment variable
         id: set_version
-        run: echo "app_version=v$(date +%Y%m%d%H%M%S)" >> $GITHUB_ENV
+        run: echo "::set-output name=app_version::v$(date +%Y%m%d%H%M%S)"
 
       - name: Log in to DockerHub
         uses: docker/login-action@v2
@@ -29,9 +29,8 @@ jobs:
 
       - name: Build and push Docker image
         run: |
-          docker build -t ${{ secrets.DOCKER_USERNAME }}/demo:${{ env.app_version }} .
-          docker push ${{ secrets.DOCKER_USERNAME }}/demo:${{ env.app_version }}
-
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/demo:${{ steps.set_version.outputs.app_version }} .
+          docker push ${{ secrets.DOCKER_USERNAME }}/demo:${{ steps.set_version.outputs.app_version }}
   tests_unitaires:
     name: Run Unit Tests
     runs-on: ubuntu-latest
@@ -55,27 +54,24 @@ jobs:
           sudo chmod +x /usr/local/bin/docker-compose
           docker-compose --version
           docker --version
-
       - name: Build and run Docker containers
         run: |
           mkdir -p postgresql_data
-          docker-compose -f docker-compose-dev.yml build
+          docker-compose -f docker-compose-dev.yml build 
           docker-compose -f docker-compose-dev.yml up -d
           sleep 10
-
       - name: Show containers
         run: |
           docker-compose -f docker-compose-dev.yml up -d
           docker-compose -f docker-compose-dev.yml ps
           docker-compose -f docker-compose-dev.yml logs
           docker network ls
-
       - name: Install dependencies
         run: |
           python -m pip install -r requirements.txt
+
           docker-compose -f docker-compose-dev.yml ps
           docker exec -i formation-devops-training-web-1 python -m pip install -r /app/requirements.txt
-
       - name: Run unit tests
         run: |
           docker run -d -i --name unit_tests --network formation-devops-training_default \
@@ -84,13 +80,17 @@ jobs:
             python:3.10-slim bash
           docker exec -i unit_tests python3 -m pip install -r requirements.txt
           docker exec -i unit_tests python3 /opt/formation-devops-training/test_main.py
-
-      - name: Run integration tests
+      - name: Run integration test
         run: |
           sudo chown -R $USER:$USER /home/runner/work/formation-devops-training/
           sudo chmod 755 /home/runner/work/formation-devops-training
-          pytest test_e2e.py
+          
 
+
+
+          
+
+          pytest test_e2e.py
   deploy:
     runs-on: self-hosted
     needs: tests_unitaires
@@ -112,7 +112,6 @@ jobs:
           mkdir -p postgresql_data
           docker-compose -f docker-compose-dev.yml up -d
           sleep 10
-
       - name: Show containers
         run: |
           docker-compose -f docker-compose-dev.yml ps
