--- a/.github/workflows/renovate.yml
+++ b/.github/workflows/renovate.yml
@@ -16,13 +16,13 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
-            node-version: '20'
+          node-version: '20'
 
       - name: Install Renovate
         run: npm install -g renovate
 
       - name: Run Renovate
-        run: renovate <username>/<repository_name> # --autodiscover
+        run: renovate leroy971/demo:lastest # --autodiscover
         env:
           RENOVATE_CONFIG_FILE: renovate.json
           RENOVATE_TOKEN: ${{ secrets.RENOVATE_TOKEN }}
