--- a/.github/workflows/renovate.yml
+++ b/.github/workflows/renovate.yml
@@ -23,7 +23,7 @@ jobs:
         run: npm install -g renovate
 
       - name: Run Renovate 
-        run: renovate leroy971/demo
+        run: renovate leroy97one/formation-devops-training
         env:
           RENOVATE_CONFIG_FILE: renovate.json
           RENOVATE_TOKEN: ${{ secrets.RENOVATE_TOKEN }}
